--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
     </nav>
     
     {{ 2 + 2}}
-    <script srt="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular.min.js"></script>
     <script src="/scripts/app.js"></script>
 </body>
 </html>
