--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
 <body>
     
     <nav class ="navbar"> <!--navigation bar -->
-        <a href="index.html" class="logo">
+        <a ui-sref="index" class="logo">
         <img src="assets/images/bloc_jams_logo.png" alt="bloc jams logo">
         </a>
         <div class="links-container">
@@ -26,7 +26,7 @@
     </nav>
     
     <ui-view></ui-view>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
     <script src="/scripts/app.js"></script>
 </body>
