--- a/app/index.html
+++ b/app/index.html
@@ -32,5 +32,6 @@
     <script src="/scripts/fixtures.js"></script>
     <script src="/scripts/Controllers/LandingCtrl.js"></script>
     <script src="/scripts/Controllers/CollectionCtrl.js"></script>
+    <script src="/scripts/Controllers/AlbumCtrl.js"></script>
 </body>
 </html>
