--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 <!DOCTYPE html>
 <html ng-app="blocJams">
 <head lang="en">
@@ -30,47 +30,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
     <script src="/scripts/app.js"></script>
-    <script src="/scripts/fixtures.js"></script>
+<!--    <script src="/scripts/fixtures.js"></script>-->
+    <script src="scripts/Services/Fixtures.js"></script>
     <script src="/scripts/Controllers/LandingCtrl.js"></script>
     <script src="/scripts/Controllers/CollectionCtrl.js"></script>
 </body>
 </html>
-=======
-<!DOCTYPE html>
-<html ng-app="blocJams">
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>Bloc Jams Angular</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,800,600,700,300">
-    <link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"> 
-    <link rel="stylesheet" type="text/css" href="styles/normalize.css">
-    <link rel="stylesheet" type="text/css" href="styles/main.css">
-    <link rel="stylesheet" type="text/css" href="styles/landing.css">
-    <link rel="stylesheet" type="text/css" href="styles/collection.css">
-    <link rel="stylesheet" type="text/css" href="styles/album.css">
-    <link rel="stylesheet" type="text/css" href="styles/player_bar.css">
-    </head>
-<body>
-    
-    <nav class ="navbar"> <!--navigation bar -->
-        <a ui-sref="landing" class="logo">
-        <img src="assets/images/bloc_jams_logo.png" alt="bloc jams logo">
-        </a>
-        <div class="links-container">
-        <a ui-sref="collection" class="navbar-link">collection</a>
-        </div>
-    </nav>
-    
-    <ui-view></ui-view>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
-    <script src="/scripts/app.js"></script>
-    <script src="/scripts/fixtures.js"></script>
-    <script src="/scripts/Controllers/LandingCtrl.js"></script>
-    <script src="/scripts/Controllers/CollectionCtrl.js"></script>
-    <script src="/scripts/Controllers/AlbumCtrl.js"></script>
-</body>
-</html>
->>>>>>> Checkpoint-5-assignment
