--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,7 @@
     <script src="scripts/Services/Fixtures.js"></script>
     <script src="/scripts/Controllers/LandingCtrl.js"></script>
     <script src="/scripts/Controllers/CollectionCtrl.js"></script>
+    <script src="scripts/Controllers/AlbumCtrl.js"></script>
 </body>
 </html>
 
