--- a/app/index.html
+++ b/app/index.html
@@ -29,9 +29,11 @@
     <ui-view></ui-view>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/buzz/1.1.10/buzz.min.js"></script>
     <script src="/scripts/app.js"></script>
 <!--    <script src="/scripts/fixtures.js"></script>-->
     <script src="scripts/Services/Fixtures.js"></script>
+    <script src="scripts/Services/SongPlayer.js"></script>
     <script src="/scripts/Controllers/LandingCtrl.js"></script>
     <script src="/scripts/Controllers/CollectionCtrl.js"></script>
     <script src="scripts/Controllers/AlbumCtrl.js"></script>
