--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,7 @@
     <script src="/scripts/Controllers/LandingCtrl.js"></script>
     <script src="/scripts/Controllers/CollectionCtrl.js"></script>
     <script src="scripts/Controllers/AlbumCtrl.js"></script>
+    <script src="scripts/Controllers/PlayerBarCtrl.js"></script>
 </body>
 </html>
 
