Checkpoints 9 and 10 completed.

--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,7 @@
     <script src="scripts/Controllers/AlbumCtrl.js"></script>
     <script src="scripts/Controllers/PlayerBarCtrl.js"></script>
     <script src="scripts/Directives/seekBar.js"></script>
+    <script src="scripts/Filters/timecode.js"></script>
 </body>
 </html>
 
